Add java 17 features