@@ -4,51 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>java14-demo</artifactId>
+    <groupId>by.uladzimirkalesny</groupId>
+    <artifactId>java-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>java 14</name>
-    <description>
-        Java 14 Preview
-        If you get error Error:java: error: release version 5 not supported
-        Change File | Settings | Build, Execution, Deployment | Compiler | Java Compiler - указать Target bytecode
-        version 14
-        into the Intellij Idea Settings(Ctrl+Alt+S)
-    </description>
+    <name>Java new version features</name>
+    <packaging>pom</packaging>
 
-    <properties>
-        <java.version>14</java.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
-    </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <release>${java.version}</release>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
-                    <parameters>true</parameters>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <modules>
+        <module>java14-demo</module>
+        <module>java17-demo</module>
+    </modules>
 
 </project>
